--- a/index.html
+++ b/index.html
@@ -29,9 +29,14 @@
             </div>
 
             <div id="requests-section"
-                style="display:none; margin-top:10px; border-top:1px solid #ccc; padding-top:5px;">
-                <h4 style="margin:5px 0; font-size:14px; color:#25d366;">Pending Requests:</h4>
+                style="display:none; margin-top:10px; border-top:1px solid rgba(0,0,0,0.1); padding-top:10px;">
+                <h4 style="margin:5px 0 10px 0; font-size:14px; color:#25d366; font-weight:600;">Pending Requests</h4>
                 <div id="requests"></div>
+            </div>
+
+            <div id="members-section" style="margin-top:15px; border-top:1px solid rgba(0,0,0,0.1); padding-top:10px;">
+                <h4 style="margin:5px 0 10px 0; font-size:14px; color:var(--text-color); font-weight:600;">Members</h4>
+                <div id="members-list"></div>
             </div>
 
             <div id="admin-actions" style="margin-top:15px; text-align:right;">
@@ -45,6 +50,13 @@
         <div class="input-area" id="login-area">
             <input id="name" placeholder="Name">
             <button onclick="join()">Join</button>
+        </div>
+        <div class="reply-preview" id="reply-preview" style="display:none;">
+            <div class="reply-content" onclick="scrollToReplyOrigin()">
+                <span id="reply-to-name" class="reply-name"></span>
+                <span id="reply-to-text" class="reply-text"></span>
+            </div>
+            <button onclick="cancelReply()" class="close-reply">×</button>
         </div>
         <div class="input-area" id="msg-area" style="display:none;">
             <!-- EMOJI BUTTON (😀) and FILE INPUT (📎) buttons are here -->
@@ -109,8 +121,9 @@
     </div>
 
     <!-- Custom Context Menu -->
-    <div id="custom-context-menu" class="context-menu" style="display:none; position:fixed; z-index:1000;">
-        <div class="context-menu-item" onclick="showDeleteConfirm()">🗑️ Delete Message</div>
+    <div id="custom-context-menu" class="context-menu" style="display:none; position:fixed; z-index:5000;">
+        <div id="ctx-reply" class="context-menu-item" onclick="triggerReplyFromContext()">↩️ Reply</div>
+        <div id="ctx-delete" class="context-menu-item" onclick="showDeleteConfirm()">🗑️ Delete Message</div>
     </div>
 
     <!-- Delete Confirmation Modal -->
@@ -122,6 +135,24 @@
                 <button onclick="confirmDeletion()" class="danger-action"
                     style="padding:10px 20px !important; border-radius:8px !important;">Confirm</button>
                 <button onclick="closeDeleteConfirm()" class="cancel-btn" style="margin:0;">Cancel</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- End Session Confirmation Modal (Replacement for JS Alert) -->
+    <div id="end-session-confirm-modal" class="modal-overlay" style="display:none; z-index:1001;">
+        <div class="modal-content" style="max-width: 400px;">
+            <h3>End Session?</h3>
+            <p style="margin-bottom: 20px; color: var(--secondary-text);">Save chat history before ending?</p>
+            <div style="display:flex; flex-direction:column; gap:10px;">
+                <button onclick="executeEndSession('save')" class="primary-action"
+                    style="padding:12px !important; border-radius:8px !important; width:100% !important;">Save &
+                    End</button>
+                <button onclick="executeEndSession('delete')" class="danger-action"
+                    style="padding:12px !important; border-radius:8px !important; width:100% !important;">Delete &
+                    End</button>
+                <button onclick="closeEndSessionModal()" class="cancel-btn"
+                    style="padding:12px !important; border-radius:8px !important; width:100% !important; margin:0;">Cancel</button>
             </div>
         </div>
     </div>
