Branding: Renamed the application to LANChat.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Secure Chat 2026</title>
+    <title>LANChat</title>
     <link rel="stylesheet" href="node_modules/cropperjs/dist/cropper.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,7 +12,7 @@
 <body>
     <div class="container" id="chat-container">
         <div class="header" id="title">
-            Secure Chat 2026
+            LANChat
             <div class="header-controls" style="display:flex; gap:10px;">
                 <button id="admin-toggle-btn"
                     style="display:none; font-size:18px; padding:5px; background:rgba(255,255,255,0.2); border-radius:50%;"
