--- a/index.html
+++ b/index.html
@@ -15,27 +15,30 @@
             LANChat
             <div class="header-controls" style="display:flex; gap:10px;">
                 <button id="admin-toggle-btn"
-                    style="display:none; font-size:18px; padding:5px; background:rgba(255,255,255,0.2); border-radius:50%;"
+                    style="display:none; font-size:18px; padding:5px; background:var(--border-subtle); border-radius:50%;"
                     title="Admin Tools" onclick="toggleAdminPanel()">⚙️</button>
             </div>
         </div>
 
         <!-- Admin Panel -->
         <div id="admin-panel" class="req-box"
-            style="display:none; background:var(--input-bg); border-bottom:1px solid var(--secondary-text); padding:10px; animation: slideDown 0.3s ease;">
+            style="display:none; background:var(--header-bg); border-bottom:1px solid var(--border-subtle); padding:10px; animation: slideDown 0.3s ease;">
             <div style="display:flex; justify-content:space-between; align-items:center;">
                 <h3 style="margin:0; font-size:16px;">Admin Controls</h3>
                 <button onclick="toggleAdminPanel()" style="font-size:12px; padding:2px 6px;">✖</button>
             </div>
 
             <div id="requests-section"
-                style="display:none; margin-top:10px; border-top:1px solid rgba(0,0,0,0.1); padding-top:10px;">
-                <h4 style="margin:5px 0 10px 0; font-size:14px; color:#25d366; font-weight:600;">Pending Requests</h4>
+                style="display:none; margin-top:10px; border-top:1px solid var(--border-subtle); padding-top:10px;">
+                <h4 style="margin:5px 0 10px 0; font-size:14px; color:var(--success); font-weight:600;">Pending Requests
+                </h4>
                 <div id="requests"></div>
             </div>
 
-            <div id="members-section" style="margin-top:15px; border-top:1px solid rgba(0,0,0,0.1); padding-top:10px;">
-                <h4 style="margin:5px 0 10px 0; font-size:14px; color:var(--text-color); font-weight:600;">Members</h4>
+            <div id="members-section"
+                style="margin-top:15px; border-top:1px solid var(--border-subtle); padding-top:10px;">
+                <h4 style="margin:5px 0 10px 0; font-size:14px; color:var(--text-primary); font-weight:600;">Members
+                </h4>
                 <div id="members-list"></div>
             </div>
 
@@ -143,7 +146,7 @@
     <div id="end-session-confirm-modal" class="modal-overlay" style="display:none; z-index:1001;">
         <div class="modal-content" style="max-width: 400px;">
             <h3>End Session?</h3>
-            <p style="margin-bottom: 20px; color: var(--secondary-text);">Save chat history before ending?</p>
+            <p style="margin-bottom: 20px; color: var(--text-secondary);">Save chat history before ending?</p>
             <div style="display:flex; flex-direction:column; gap:10px;">
                 <button onclick="executeEndSession('save')" class="primary-action"
                     style="padding:12px !important; border-radius:8px !important; width:100% !important;">Save &
